--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,127 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/menu_LL"
+    android:orientation="vertical"
+    android:background="?attr/background"
     tools:context=".Menu">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/menu_LL"
-            android:orientation="vertical"
-            >
            <RelativeLayout
                android:layout_width="match_parent"
-               android:layout_height="wrap_content"
+               android:layout_height="56dp"
                android:orientation="horizontal"
+               android:background="?attr/surface"
+               android:elevation="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Wecker"
-                   style="@style/menu_text_style"
+                   android:layout_height="match_parent"
+                   android:layout_centerHorizontal="true"
+                   android:id="@+id/date_menu_TV"
+                   android:textSize="24dp"
+                   android:text="22.03.2020"
+                   android:gravity="center"
+                   android:textColor="?attr/on_surface"
                    >
 
                </TextView>
                <TextView
+                   android:id="@+id/burger_menu_icon"
                    android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
+                   android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:text="Menü"
-                   style="@style/menu_text_style"
+                   android:textColor="?attr/on_background_hint"
+                   android:gravity="center"
+                   android:layout_marginEnd="6dp"
                    >
 
                </TextView>
+
+               <Switch
+                   android:id="@+id/color_theme_switch"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_centerVertical="true"
+                   android:layout_margin="4dp"
+                   />
+
            </RelativeLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/date_menu_TV"
-                android:textSize="16dp"
-                android:text="22.03.2020"
-                android:layout_gravity="center_horizontal"
-                >
-
-            </TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="Schön, dass Du da bist!"
+                android:textAlignment="center"
                 android:layout_gravity="center_horizontal"
                 android:textSize="32sp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
+                android:textColor="?attr/primary_dark"
                 >
             </TextView>
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="220dp">
-                <TextView
-                    style="@style/menu_bottoms"
-                    android:id="@+id/activities_menu_TV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Aktivitäten"
-                    android:layout_centerInParent="true">
-                </TextView>
-                <TextView
-                    style="@style/menu_bottoms"
-                    android:id="@+id/ressources_menu_TV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Meine Ressourcen"
-                    android:layout_alignParentRight="true">
-
-                </TextView>
-                <TextView
-                    style="@style/menu_bottoms"
-                    android:id="@+id/dayplan_menu_TV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Tagesplan"
-                    android:layout_alignParentLeft="true">
-
-                </TextView>
-                <TextView
-                    style="@style/menu_bottoms"
-                    android:id="@+id/weekplan_menu_TV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Wochenplan"
-                    android:layout_alignParentBottom="true">
-
-                </TextView>
-                <TextView
-                    style="@style/menu_bottoms"
-                    android:id="@+id/success_menu_TV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Erfolge"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true">
-
-                </TextView>
-            </RelativeLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/menu_bottoms"
-                android:layout_gravity="center_horizontal"
-                android:text="Notfall">
-
-            </TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mein Profil"
-                style="@style/menu_text_style"
-                android:textSize="22sp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal"
                 >
+                <Button
+                    style="@style/menu_buttons"
+                    android:id="@+id/activities_menu_TV"
+                    android:text="Aktivitäten">
+                </Button>
+                <Button
+                    style="@style/menu_buttons"
+                    android:id="@+id/ressources_menu_TV"
+                    android:text="Meine Ressourcen">
 
-            </TextView>
+                </Button>
+            </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        >
+                <Button
+                    style="@style/menu_buttons"
+                    android:id="@+id/dayplan_menu_TV"
+                    android:text="Tagesplan">
+
+                </Button>
+                <Button
+                    style="@style/menu_buttons"
+                    android:id="@+id/weekplan_menu_TV"
+                    android:text="Wochenplan">
+
+                </Button>
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+                <Button
+                    style="@style/menu_buttons"
+                    android:id="@+id/success_menu_TV"
+                    android:text="Erfolge">
+
+                </Button>
+                <Button
+                    style="@style/menu_buttons"
+                    android:text="Notfall">
+
+                </Button>
+</LinearLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -130,14 +123,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Über uns"
-                    style="@style/menu_bottoms_buttom"
+                    style="@style/menu_buttons_bottom"
                     >
                 </TextView>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Feedback"
-                    style="@style/menu_bottoms_buttom"
+                    style="@style/menu_buttons_bottom"
                     android:layout_centerInParent="true"
                     >
                 </TextView>
@@ -145,13 +138,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Hilfe"
-                    style="@style/menu_bottoms_buttom"
+                    style="@style/menu_buttons_bottom"
                     android:layout_alignParentRight="true"
                     >
                 </TextView>
 
             </RelativeLayout>
-        </LinearLayout>
-    </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
