--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -2,14 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:state_pressed="false">
     <shape android:shape="oval">
-        <solid android:color="#ffffff"/>
-        <stroke android:width="1dip" android:color="#5C90C8"/>
+        <solid android:color="?attr/primary"/>
     </shape>
 </item>
 <item android:state_pressed="true">
     <shape android:shape="oval">
-        <solid android:color="#ffffff"/>
-        <stroke android:width="1dip" android:color="#1082AF"/>
+        <solid android:color="?attr/primary_dark"/>
     </shape>
 </item>
 </selector>
