--- a/app/src/main/res/layout/activity_preferences__interaction.xml
+++ b/app/src/main/res/layout/activity_preferences__interaction.xml
@@ -12,80 +12,67 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="40dp"
-        android:weightSum="3">
+        android:weightSum="3"
+        android:background="?attr/background"
+        android:paddingBottom="16dp"
+        >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginTop="16dp"
+            style="@style/preferences_linear_layout"
+            >
 
             <TextView
-                android:padding="20dp"
-                android:textSize="18sp"
                 android:id="@+id/fruehstueck_Text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/fruehstueck_text" />
+                android:text="@string/fruehstueck_text"
+                style="@style/preferences_text"
+                />
 
             <Spinner
                 android:id="@+id/fruehstueck_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                style="@style/preferences_spinner"
+                />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            style="@style/preferences_linear_layout"
+            >
 
             <TextView
                 android:id="@+id/mittagessen_text"
-                android:padding="20dp"
-                android:textSize="18sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Mittagessen_text" />
+                android:text="@string/Mittagessen_text"
+                style="@style/preferences_text"
+                />
 
             <Spinner
                 android:id="@+id/mittagessen_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                style="@style/preferences_spinner"
+                />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            style="@style/preferences_linear_layout"
+            >
 
             <TextView
-                android:padding="20dp"
-                android:textSize="18sp"
                 android:id="@+id/abendessen_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Abendessen_text" />
+                android:text="@string/Abendessen_text"
+                style="@style/preferences_text"
+                />
 
             <Spinner
                 android:id="@+id/abendessen_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                style="@style/preferences_spinner"/>
 
         </LinearLayout>
 
         <Button
             android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Next_button_Essen" />
+            android:text="@string/Next_button_Essen"
+            style="@style/general_button"
+            />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
